# BOtest

./: .gitignore  CMakeLists.txt  ctime.txt  main.cpp  value.txt
limbo/acqui/: gp_ucb.hpp  ucb.hpp
limbo/bayes_opt/: bo_base.hpp  boptimizer.hpp
limbo/init/: random_sampling.hpp
limbo/opt/: nlopt_no_grad.hpp
plot/: StyblinskiTang_ma_0.2_gp_0.1.txt  ackley_ma_0.2_gp_0.1.txt  ctime_ schwefel_4000eval.txt  ellipsoid_ma_0.2_gp_0.1.txt  fitness.R  michalewicz_ma_0.2_gp_0.1.txt  rosenbrock_ma_0.2_gp_0.1.txt  schwefel_4000eval.txt  schwefel_ma_0.2_gp_0.1.txt  sphere_ma_0.2_gp_0.1.txt
results/branin/: ctime.txt  value.txt
results/ellipsoid/: ctime.txt  value.txt
results/goldsteinprice/: ctime-.txt  ctime.txt  value-.txt  value.txt
results/hartmann3/: ctime.txt  value.txt
results/hartmann6/: ctime.txt  value.txt
results/rastrigin/: ctime.txt  value.txt
results/sixhumpcamel/: ctime.txt  value.txt
results/sphere/: ctime.txt  value.txt
